--- a/examples/SSRPassIssue.html
+++ b/examples/SSRPassIssue.html
@@ -23,19 +23,19 @@
   <script type="module">
     // https://github.com/mrdoob/three.js/issues/21379
 
-    import * as THREE from '//cdn.jsdelivr.net/gh/mrdoob/three.js@dev/build/three.module.js';
+    import * as THREE from '../build/three.module.js';
     import {
       OrbitControls
-    } from '//cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/jsm/controls/OrbitControls.js'
+    } from '../examples/jsm/controls/OrbitControls.js'
     import {
       EffectComposer
-    } from '//cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/jsm/postprocessing/EffectComposer.js'
+    } from '../examples/jsm/postprocessing/EffectComposer.js'
     import {
       RenderPass
-    } from '//cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/jsm/postprocessing/RenderPass.js'
+    } from '../examples/jsm/postprocessing/RenderPass.js'
     import {
       SSRPass
-    } from '//cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/jsm/postprocessing/SSRPass.js'
+    } from '../examples/jsm/postprocessing/SSRPass.js'
 
 
     const renderer = new THREE.WebGLRenderer({});
