--- a/examples/SSRPassIssue.html
+++ b/examples/SSRPassIssue.html
@@ -23,7 +23,7 @@
   <script type="module">
     // https://github.com/mrdoob/three.js/issues/21379
 
-    import * as THREE from '../build/three.module.js';
+    import * as THREE from '../src/Three.js';
     import {
       OrbitControls
     } from '../examples/jsm/controls/OrbitControls.js'
@@ -67,27 +67,29 @@
         metalness: 0.5,
         roughness: 0.5
       }),
-      2
+      1
     );
+		mesh0.name='my_instancedMesh'
     mesh0.setMatrixAt(0, new THREE.Matrix4().makeTranslation(0, 0, 0));
-    mesh0.setMatrixAt(1, new THREE.Matrix4().makeTranslation(1, 1, 0));
+    // mesh0.setMatrixAt(1, new THREE.Matrix4().makeTranslation(1, 1, 0));
     mesh0.instanceMatrix.needsUpdate = true;
 
     //// Make a regular mesh
 
-    // const mesh1 = new THREE.Mesh(
-    //   new THREE.BoxBufferGeometry(1, 1, 1),
-    //   new THREE.MeshStandardMaterial({
-    //     color: 'red',
-    //     metalness: 0.5,
-    //     roughness: 0.5
-    //   })
-    // );
-    // mesh1.position.set(0, 1, 0);
+    const mesh1 = new THREE.Mesh(
+      new THREE.BoxBufferGeometry(1, 1, 1),
+      new THREE.MeshStandardMaterial({
+        color: 'red',
+        metalness: 0.5,
+        roughness: 0.5
+      })
+    );
+		mesh1.name='my_regular_mesh'
+    mesh1.position.set(0, 1, 0);
 
     //// Now, add meshes (instanced mesh + regular mesh) to the scene
 
-    scene.add(mesh0);
+    scene.add(mesh0, mesh1);
 		scene.overrideMaterial = new THREE.MeshNormalMaterial()
 
     //// Set render loop
