--- a/examples/SSRPassIssue.html
+++ b/examples/SSRPassIssue.html
@@ -23,10 +23,19 @@
   <script type="module">
     // https://github.com/mrdoob/three.js/issues/21379
 
-    import * as THREE from '../src/Three.js';
+    import * as THREE from '../build/three.module.js';
     import {
       OrbitControls
     } from '../examples/jsm/controls/OrbitControls.js'
+    import {
+      EffectComposer
+    } from '../examples/jsm/postprocessing/EffectComposer.js'
+    import {
+      RenderPass
+    } from '../examples/jsm/postprocessing/RenderPass.js'
+    import {
+      SSRPass
+    } from '../examples/jsm/postprocessing/SSRPass.js'
 
 
     const renderer = new THREE.WebGLRenderer({});
@@ -67,11 +76,10 @@
         metalness: 0.5,
         roughness: 0.5
       }),
-      1
+      2
     );
-		mesh0.name='my_instancedMesh'
     mesh0.setMatrixAt(0, new THREE.Matrix4().makeTranslation(0, 0, 0));
-    // mesh0.setMatrixAt(1, new THREE.Matrix4().makeTranslation(1, 1, 0));
+    mesh0.setMatrixAt(1, new THREE.Matrix4().makeTranslation(1, 1, 0));
     mesh0.instanceMatrix.needsUpdate = true;
 
     //// Make a regular mesh
@@ -84,18 +92,27 @@
         roughness: 0.5
       })
     );
-		mesh1.name='my_regular_mesh'
     mesh1.position.set(0, 1, 0);
 
     //// Now, add meshes (instanced mesh + regular mesh) to the scene
 
     scene.add(mesh0, mesh1);
-		scene.overrideMaterial = new THREE.MeshNormalMaterial()
+
+    //// Make composer 
+
+    const composer = new EffectComposer(renderer);
+    composer.addPass(new RenderPass(scene, camera));
+    composer.addPass(new SSRPass({
+      renderer,
+      scene,
+      camera
+    }));
 
     //// Set render loop
 
     renderer.setAnimationLoop(() => {
-      renderer.render(scene, camera)
+      composer.render();
+      // renderer.render(scene, camera)
       controls.update();
     });
 
