--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -132,6 +132,7 @@
 			selects.push( mesh );
 
 			geometry = new THREE.PlaneBufferGeometry( 8, 8 );
+			geometry.rotateX(- Math.PI / 2)
 			groundReflector = new Reflector( geometry, {
 				clipBias: 0.003,
 				textureWidth: window.innerWidth,
@@ -142,7 +143,7 @@
 			window.groundReflector=groundReflector
 			groundReflector.material.depthWrite = false;
 			// groundReflector.position.y = plane.position.y + .0001;
-			groundReflector.rotation.x = - Math.PI / 2;
+			// groundReflector.rotation.x = - Math.PI / 2;
 			groundReflector.visible = false;
 			scene.add( groundReflector );
 
