--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -77,7 +77,7 @@
 			plane.rotation.x = - Math.PI / 2;
 			plane.position.y = -.0001;
 			// plane.receiveShadow = true;
-			scene.add( plane );
+			// scene.add( plane );
 
 			// Lights
 			const hemiLight = new THREE.HemisphereLight( 0x443333, 0x111122 );
