--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -63,7 +63,7 @@
 		function init() {
 
 			camera = new THREE.PerspectiveCamera( 35, window.innerWidth / window.innerHeight, 0.1, 15 );
-			camera.position.set( 0.13271600513224902, 0.3489546826045913, 0.43921296427927076 );
+			camera.position.set( 0., 0., 1 );
 
 			scene = new THREE.Scene();
 			scene.background = new THREE.Color( 0x443333 );
