--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -63,7 +63,8 @@
 		function init() {
 
 			camera = new THREE.PerspectiveCamera( 35, window.innerWidth / window.innerHeight, 0.1, 15 );
-			camera.position.set( 0., 0., 1 );
+			window.camera=camera
+			camera.position.set( 0., 1, 2 );
 
 			scene = new THREE.Scene();
 			scene.background = new THREE.Color( 0x443333 );
