--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -157,7 +157,7 @@
 			//
 
 			controls = new OrbitControls( camera, renderer.domElement );
-			controls.enableDamping = true;
+			// controls.enableDamping = true;
 			controls.target.set( 0, 0.0365, 0 );
 			controls.update();
 			controls.enabled = ! params.autoRotate;
