--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -125,7 +125,7 @@
 					window.mesh_bunny=mesh
 					scene.add(mesh);
 					objects.push(mesh);
-					// selects.push(mesh);
+					selects.push(mesh);
 					mesh.castShadow = true;
 					mesh.receiveShadow = true;
 
