--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -266,7 +266,7 @@
 
 			folder.add(ssrrPass, 'isInfiniteThick');
 			folder.add(ssrrPass, 'thickTolerance').min(0).max(.05).step(.0001);
-			// folder.open()
+			folder.open()
 			// gui.close()
 
 			animate();
