--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -34,13 +34,12 @@
 		const params = {
 			enableSSR: true,
 			autoRotate: true,
-			isOtherMeshes: true,
-			isGroundReflector: true,
+			otherMeshes: true,
+			groundReflector: true,
 		};
 		let composer;
 		let ssrPass;
 		let gui;
-		const isPerspectiveCamera = true;
 		let stats;
 		let controls;
 		let camera, scene, renderer;
@@ -174,20 +173,19 @@
 				width: innerWidth,
 				height: innerHeight,
 				encoding: THREE.sRGBEncoding,
-				isPerspectiveCamera: isPerspectiveCamera,
-				groundReflector: params.isGroundReflector ? groundReflector : null,
-				selects: params.isGroundReflector ? selects : null
+				groundReflector: params.groundReflector ? groundReflector : null,
+				selects: params.groundReflector ? selects : null
 			} );
 
 			composer.addPass( ssrPass );
 
 			// GUI
 
-			gui = new GUI();
+			gui = new GUI( { width: 260 } );
 			gui.add( params, 'enableSSR' ).name( 'Enable SSR' );
-			gui.add( params, 'isGroundReflector' ).onChange( () => {
+			gui.add( params, 'groundReflector' ).onChange( () => {
 
-				if ( params.isGroundReflector ) {
+				if ( params.groundReflector ) {
 
 					ssrPass.groundReflector = groundReflector,
 					ssrPass.selects = selects;
@@ -207,14 +205,14 @@
 			} );
 
 			const folder = gui.addFolder( 'more settings' );
-			folder.add( ssrPass, 'isFresnel' ).onChange( ()=>{
+			folder.add( ssrPass, 'fresnel' ).onChange( ()=>{
 
-				groundReflector.isFresnel = ssrPass.isFresnel;
+				groundReflector.fresnel = ssrPass.fresnel;
 
 			} );
-			folder.add( ssrPass, 'isDistanceAttenuation' ).onChange( ()=>{
+			folder.add( ssrPass, 'distanceAttenuation' ).onChange( ()=>{
 
-				groundReflector.isDistanceAttenuation = ssrPass.isDistanceAttenuation;
+				groundReflector.distanceAttenuation = ssrPass.distanceAttenuation;
 
 			} );
 			ssrPass.maxDistance = .1;
@@ -224,9 +222,9 @@
 				groundReflector.maxDistance = ssrPass.maxDistance;
 
 			} );
-			folder.add( params, 'isOtherMeshes' ).onChange( () => {
+			folder.add( params, 'otherMeshes' ).onChange( () => {
 
-				if ( params.isOtherMeshes ) {
+				if ( params.otherMeshes ) {
 
 					otherMeshes.forEach( mesh => mesh.visible = true );
 
@@ -237,7 +235,7 @@
 				}
 
 			} );
-			folder.add( ssrPass, 'isBouncing' );
+			folder.add( ssrPass, 'bouncing' );
 			folder.add( ssrPass, 'output', {
 				'Default': SSRPass.OUTPUT.Default,
 				'SSR Only': SSRPass.OUTPUT.SSR,
@@ -257,22 +255,11 @@
 				groundReflector.opacity = ssrPass.opacity;
 
 			} );
-
-			if ( isPerspectiveCamera ) {
-
-				ssrPass.surfDist = 0.0015;
-				folder.add( ssrPass, 'surfDist' ).min( 0 ).max( .005 ).step( .0001 );
-
-			} else {
-
-				ssrPass.surfDist = 2;
-				folder.add( ssrPass, 'surfDist' ).min( 0 ).max( 7 ).step( .01 );
-
-			}
-
-			folder.add( ssrPass, 'isInfiniteThick' );
+			ssrPass.surfDist = 0.0015;
+			folder.add( ssrPass, 'surfDist' ).min( 0 ).max( .005 ).step( .0001 );
+			folder.add( ssrPass, 'infiniteThick' );
 			folder.add( ssrPass, 'thickTolerance' ).min( 0 ).max( .05 ).step( .0001 );
-			folder.add( ssrPass, 'isBlur' );
+			folder.add( ssrPass, 'blur' );
 			// gui.close()
 
 		}
