--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -131,7 +131,7 @@
 			geometry = new THREE.PlaneBufferGeometry( 1, 1 );
 			groundReflector = new ReflectorForSSRPass( geometry, {
 				clipBias: 0,
-				worldYBias: - 0.027450980392156862,
+				// worldYBias: - 0.027450980392156862,
 				textureWidth: window.innerWidth,
 				textureHeight: window.innerHeight,
 				color: 0x888888,
@@ -205,21 +205,26 @@
 			} );
 
 			const folder = gui.addFolder( 'more settings' );
+			ssrPass.fresnel=false
+			groundReflector.fresnel=ssrPass.fresnel
 			folder.add( ssrPass, 'fresnel' ).onChange( ()=>{
 
 				groundReflector.fresnel = ssrPass.fresnel;
 
 			} );
+			ssrPass.distanceAttenuation = false;
+			groundReflector.distanceAttenuation = ssrPass.distanceAttenuation;
 			folder.add( ssrPass, 'distanceAttenuation' ).onChange( ()=>{
 
 				groundReflector.distanceAttenuation = ssrPass.distanceAttenuation;
 
 			} );
-			ssrPass.maxDistance = .1;
+			// ssrPass.maxDistance = .1;
+			ssrPass.maxDistance = 0;
 			groundReflector.maxDistance = ssrPass.maxDistance;
-			folder.add( ssrPass, 'maxDistance' ).min( 0 ).max( .5 ).step( .001 ).onChange( ()=>{
+			folder.add( groundReflector, 'maxDistance' ).min( 0 ).max( .5 ).step( .001 ).onChange( ()=>{
 
-				groundReflector.maxDistance = ssrPass.maxDistance;
+				// groundReflector.maxDistance = ssrPass.maxDistance;
 
 			} );
 			folder.add( params, 'otherMeshes' ).onChange( () => {
