--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -19,6 +19,7 @@
 
 	<script type="module">
 		import * as THREE from '../build/three.module.js';
+		window.THREE=THREE;
 
 		import Stats from './jsm/libs/stats.module.js';
 
