--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -171,6 +171,11 @@
 
 			window.addEventListener( 'resize', onWindowResize, false );
 
+			const size = 10;
+			const divisions = 10;
+			const gridHelper = new THREE.GridHelper( size, divisions );
+			scene.add( gridHelper );
+
 			// composer
 
 			composer = new EffectComposer( renderer );
