--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -93,7 +93,7 @@
 
 				geometry.computeVertexNormals();
 
-				const material = new THREE.MeshStandardMaterial( { color: 0x606060 } );
+				const material = new THREE.MeshStandardMaterial( { metalness:.5,roughness:.1, color: 0x606060 } );
 				const mesh = new THREE.Mesh( geometry, material );
 				scene.add( mesh );
 				selects.push( mesh );
@@ -106,7 +106,7 @@
 			let geometry, material, mesh;
 
 			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
-			material = new THREE.MeshStandardMaterial( { color: 'green' } );
+			material = new THREE.MeshStandardMaterial( { metalness:.5,roughness:.1, color: 'green' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .12, plane.position.y + .025, .015 );
 			scene.add( mesh );
@@ -114,7 +114,7 @@
 			selects.push( mesh );
 
 			geometry = new THREE.IcosahedronBufferGeometry( .025, 4 );
-			material = new THREE.MeshStandardMaterial( { color: 'cyan' } );
+			material = new THREE.MeshStandardMaterial( { metalness:.5,roughness:.1, color: 'cyan' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .05, plane.position.y + .025, .08 );
 			scene.add( mesh );
@@ -122,7 +122,7 @@
 			selects.push( mesh );
 
 			geometry = new THREE.ConeBufferGeometry( .025, .05, 64 );
-			material = new THREE.MeshStandardMaterial( { color: 'yellow' } );
+			material = new THREE.MeshStandardMaterial( { metalness:.5,roughness:.1, color: 'yellow' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .05, plane.position.y + .025, - .055 );
 			scene.add( mesh );
@@ -285,12 +285,12 @@
 				.setDataType( THREE.UnsignedByteType )
 				.setPath( 'textures/equirectangular/' )
 				.load( 'royal_esplanade_1k.hdr', function ( texture ) {
-						const envMap = pmremGenerator.fromEquirectangular( texture ).texture;
-						scene.background = envMap;
-						scene.environment = envMap;
-						texture.dispose();
-						pmremGenerator.dispose();
-						render();
+					const envMap = pmremGenerator.fromEquirectangular( texture ).texture;
+					scene.background = envMap;
+					scene.environment = envMap;
+					texture.dispose();
+					pmremGenerator.dispose();
+					// render();
 				});
 
 		}
