--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -34,7 +34,7 @@
 
 		const params = {
 			enableSSR: true,
-			autoRotate: false,
+			autoRotate: true,
 			isOtherMeshes: true,
 			isGroundReflector: true,
 		};
