--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -68,7 +68,8 @@
 			window.camera=camera
 			
 			// camera.position.set( 0.13271600513224902, 0.3489546826045913, 0.43921296427927076 );
-			camera.position.set( 0, 1, 1 );
+			camera.position.set( 0, 1, 1 ).normalize();
+			// camera.position.set( 0, 0, 1 );
 
 			// camera.position.set( 0, 0, 3 );
 			// camera.lookAt(0,0,0)
@@ -80,6 +81,7 @@
 			// vs.print(camera.projectionMatrix)
 
 			scene = new THREE.Scene();
+			window.scene=scene
 			scene.background = new THREE.Color( 0x443333 );
 			scene.fog = new THREE.Fog( 0x443333, 1, 4 );
 
@@ -164,6 +166,7 @@
 
 			// renderer
 			renderer = new THREE.WebGLRenderer( { antialias: false } );
+			window.renderer=renderer
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			renderer.outputEncoding = THREE.sRGBEncoding;
 			container.appendChild( renderer.domElement );
