--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -82,8 +82,8 @@
 
 			scene = new THREE.Scene();
 			window.scene=scene
-			scene.background = new THREE.Color( 0x443333 );
-			scene.fog = new THREE.Fog( 0x443333, 1, 4 );
+			// scene.background = new THREE.Color( 0x443333 );
+			// scene.fog = new THREE.Fog( 0x443333, 1, 4 );
 
 			// Ground
 			const plane = new THREE.Mesh(
@@ -191,7 +191,7 @@
 			const size = 10;
 			const divisions = 10;
 			const gridHelper = new THREE.GridHelper( size, divisions );
-			gridHelper.rotation.x=Math.PI/2
+			// gridHelper.rotation.x=Math.PI/2
 			scene.add( gridHelper );
 
 			// composer
